🚀 DEPLOY: Portfolio prêt pour GitHub Pages
✅ PRODUCTION BUILD:
- Build optimisé (297.49 kB → 76.54 kB gzippé)
- Base href configuré pour /angular-portfolio/
- Tous les assets copiés vers /docs
- SEO meta tags complets
- Structured data JSON-LD
- Favicon et images optimisées

✅ DÉPLOIEMENT:
- Script deploy.ps1 ajouté pour automation
- Dossier /docs prêt pour GitHub Pages
- Encodage UTF-8 corrigé sur tous les fichiers

Portfolio 100% prêt pour publication ! 🌟

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Abdellah ABDEDOU - Développeur Full Stack | Java Spring Boot & Node.js</title>
-  <base href="/abdellah-portfolio/">
+  <base href="/angular-portfolio/">
   <link rel="icon" type="image/x-icon" href="assets/favicon.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Abdellah ABDEDOU, développeur Full Stack expert en Java Spring Boot et Node.js NestJS. 2+ années d'expérience en architecture logicielle, API sécurisées et applications web évolutives. Disponible en freelance.">
