Update email address and rebuild for GitHub Pages

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
     ],
     "knowsAbout": ["Java", "Spring Boot", "Node.js", "NestJS", "Architecture logicielle", "API REST"],
     "alumniOf": "ETNA",
-    "email": "abdedo_a@etna-alternance.net"
+    "email": "abdellah.abdedo@gmail.com"
   }
   </script>
 </head>
